💄 [Portfolio, fixes #18] - Fixed row scrolling and alignment for porfolio items in map

--- a/portfolio/src/components/Portfolio/Portfolio.module.scss
+++ b/portfolio/src/components/Portfolio/Portfolio.module.scss
@@ -21,19 +21,22 @@
       font-size: 2rem;
     }
   }
+  & .portfolio__list__wrapper {
+    max-width: 100vw;
+    & .portfolio__list {
+      display: flex;
+      // align-items: center;
+      // overflow-y: hidden;
+      overflow-x: scroll;
+      margin: 1.25rem;
 
-  & .portfolio__list {
-    display: flex;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    margin: 1.25rem;
+      @media (max-width: 48rem) {
+        flex-direction: column;
+      }
 
-    @media (max-width: 48rem) {
-      flex-direction: column;
-    }
-
-    &::-webkit-scrollbar {
-      display: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
   }
 }
